--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,13 +67,26 @@ jobs:
 
   deploy-k8s:
     docker:
-      - image: cimg/python:3.10
+      - image: cimg/python:3.10.7
     steps:
       - checkout
-      - kubernetes/install:
-          kubectl-version: v1.22.0
-      - aws-eks/update-kubeconfig-with-authenticator:
-          cluster-name: capstone
+      - run:
+          name: Install awscli
+          command: curl --silent "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && unzip awscliv2.zip && sudo ./aws/install
+      - run:
+          name: Install eksctl
+          command: curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp && sudo mv /tmp/eksctl /usr/local/bin
+      - run:
+          name: Install and configure kubectl
+          command: curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" && sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl && kubectl version --client
+      - run:
+          name: Install and configure kubectl aws-iam-authenticator
+          command: curl -Lo aws-iam-authenticator https://github.com/kubernetes-sigs/aws-iam-authenticator/releases/download/v0.5.9/aws-iam-authenticator_0.5.9_linux_amd64 && chmod +x ./aws-iam-authenticator && mkdir -p $HOME/bin && cp ./aws-iam-authenticator $HOME/bin/aws-iam-authenticator && export PATH=$PATH:$HOME/bin
+  
+      - run:
+          name: "cluster configs"
+          command: |
+            eksctl utils write-kubeconfig --cluster=capstone --region=us-east-1      
       - run:
           command: |
             kubectl get nodes
@@ -88,6 +101,29 @@ jobs:
           name: deploy new image tag
           command: |
             kubectl apply -f deployment/deployment.yaml
+  # deploy-k8s:
+  #   docker:
+  #     - image: cimg/python:3.10
+  #   steps:
+  #     - checkout
+  #     - kubernetes/install:
+  #         kubectl-version: v1.22.0
+  #     - aws-eks/update-kubeconfig-with-authenticator:
+  #         cluster-name: capstone
+  #     - run:
+  #         command: |
+  #           kubectl get nodes
+
+  #         name: Test cluster
+  #     - run:
+  #         name: update image tag
+  #         command: |
+  #           sed -ie "s/{tag}/<< pipeline.id >>/g" deployment/deployment.yaml
+  #           sed -ie "s/{image}/${DOCKER_USER}\/capstone/g" deployment/deployment.yaml
+  #     - run:
+  #         name: deploy new image tag
+  #         command: |
+  #           kubectl apply -f deployment/deployment.yaml
 
 workflows:
   default:
