--- a/deployment/deployment.yml
+++ b/deployment/deployment.yml
@@ -1,14 +1,14 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: flask-app
+  name: capstone
   labels:
-    app.kubernetes.io/name: flask-app
+    app.kubernetes.io/name: capstone
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app.kubernetes.io/name: flask-app
+      app.kubernetes.io/name: capstone
   template:
     metadata:
       labels:
@@ -18,7 +18,7 @@ spec:
       - name: capstone
         image: {image}:{tag}
         ports:
-        - containerPort: 3000
+        - containerPort: 8501
 ---
 apiVersion: v1
 kind: Service
